// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Highlight /> renders with highlight 1`] = `
<span
  className="highlightable"
>
  <span
    key="0"
  >
    he
  </span>
  <mark
    key="1"
  >
    ll
  </mark>
  <span
    key="2"
  >
    o
  </span>
</span>
`;

exports[`<Highlight /> renders with highlight 2`] = `
<span
  className="highlightable"
>
  <mark
    key="0"
  >
    he
  </mark>
  <span
    key="1"
  >
    llo 
  </span>
  <mark
    key="2"
  >
    he
  </mark>
  <span
    key="3"
  >
    llo
  </span>
</span>
`;

exports[`<Highlight /> renders with highlight 3`] = `
<span>
  hello
</span>
`;

exports[`<Highlight /> renders with highlight 4`] = `
<span
  className="highlightable"
>
  <span
    key="0"
  >
    1
  </span>
  <mark
    key="1"
  >
    2
  </mark>
  <span
    key="2"
  >
    34
  </span>
</span>
`;

exports[`<Highlight /> renders with highlight 5`] = `
<span
  className="highlightable"
>
  <span
    key="0"
  >
    1
  </span>
  <mark
    key="1"
  >
    2
  </mark>
  <span
    key="2"
  >
    34
  </span>
</span>
`;

exports[`<Highlight /> renders without crashing 1`] = `
<span>
  Hello
</span>
`;
